<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="146dp"
            android:layout_height="80dp"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="28dp"
            android:text="@string/add"
            android:textSize="24sp"
            app:backgroundTint="#4CAF50"
            app:layout_constraintEnd_toStartOf="@+id/btnView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/btnView"
            android:layout_width="146dp"
            android:layout_height="80dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="52dp"
            android:layout_marginRight="36dp"
            android:text="@string/view"
            android:textSize="24sp"
            app:backgroundTint="#4CAF50"
            app:layout_constraintBottom_toBottomOf="@+id/btnAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="146dp"
            android:layout_height="80dp"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="24dp"
            android:text="@string/update"
            android:textSize="24sp"
            app:backgroundTint="#4CAF50"
            app:layout_constraintBottom_toBottomOf="@+id/btnDelete"
            app:layout_constraintEnd_toStartOf="@+id/btnDelete"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAdd"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="146dp"
            android:layout_height="80dp"
            android:layout_marginEnd="52dp"
            android:layout_marginRight="52dp"
            android:text="@string/delete"
            android:textSize="24sp"
            app:backgroundTint="#4CAF50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="294dp"
            android:layout_height="297dp"
            android:layout_marginTop="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="321dp"
            android:layout_height="82dp"
            android:layout_marginTop="32dp"
            android:text="@string/identity"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.59"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="301dp"
            android:layout_height="61dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/please_enter_filename"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

